--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,7 @@ jobs:
     
     steps:
       - name: Hello world Ubuntu!
-        run: echo 'date'
+        run: date
         
   print_hello_world_windows:
     name: Hello world Windows!
@@ -18,7 +18,7 @@ jobs:
     
     steps:
       - name: Hello world Windows!
-        run: echo 'date'
+        run: echo date
         
   print_hello_world_macos:
     name: Hello world MacOS!
@@ -26,10 +26,10 @@ jobs:
     
     steps:
       - name: Hello world MacOS!
-        run: echo 'Hello world MacOS!'
+        run: date
         
   print_hello_world_ubuntu2:
-    name: Hello world Ubuntu!
+    name: Hello world Ubuntu2!
     runs-on: ubuntu-latest
     needs:
       - print_hello_world_ubuntu
