--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
     
     steps:
       - name: Hello world Windows!
-        run: echo date
+        run: date
         
   print_hello_world_macos:
     name: Hello world MacOS!
