--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,41 +1,41 @@
-name: "Hello world workflow"
+name: "Exercicio 1"
 
 on:
   push:
   
 jobs:
-  print_hello_world_ubuntu:
-    name: Hello world Ubuntu!
+  print_date_ubuntu:
+    name: Print date Ubuntu!
     runs-on: ubuntu-latest
     
     steps:
-      - name: Hello world Ubuntu!
+      - name: Print date Ubuntu!
         run: date
         
-  print_hello_world_windows:
-    name: Hello world Windows!
+  print_date_windows:
+    name: Print date Windows!
     runs-on: windows-latest
     
     steps:
-      - name: Hello world Windows!
+      - name: Print date Windows!
         run: date
         
-  print_hello_world_macos:
-    name: Hello world MacOS!
+  print_date_macos:
+    name: Print date MacOS!
     runs-on: macos-latest
     
     steps:
-      - name: Hello world MacOS!
+      - name: Print date MacOS!
         run: date
         
-  print_hello_world_ubuntu2:
-    name: Hello world Ubuntu2!
+  print_date_ubuntu2:
+    name: Print date Ubuntu2!
     runs-on: ubuntu-latest
     needs:
-      - print_hello_world_ubuntu
-      - print_hello_world_windows
-      - print_hello_world_macos
+      - print_date_ubuntu
+      - print_date_windows
+      - print_date_macos
     
     steps:
-      - name: Hello world Ubuntu!
-        run: echo 'Helo Word'      
+      - name: Print date Ubuntu2!
+        run: echo 'Print Date'      
