--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -12,4 +12,10 @@ jobs:
     steps:
       - name: checkout repository
         uses: actions/checkout@v3.3.0
-  
+        
+      - name: Upload a Build Artifact
+        uses: actions/upload-artifact@v3.1.2
+        with:
+          name: Repositorio do geraldo
+          path: .
+          retention-days: 15
