--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -4,7 +4,7 @@ on:
   push:
   
 jobs:
-  cria_e_up_artefato:
+  cria_e_upload_artefato:
     name: "Cria artefato e faz upload"
   
     runs-on: ubuntu-last
